Block data values deffered until after generation.  (For Mesa biome) Now uses maxima on the y axis of the noise instead of averaged values. Supports smoothed base layers. Better river gorges. More options. Beach biome. Multi layer biome decorator.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-name: FloatingIslandGenerator
+name: EquinoxWorldGen
 version: 0.1
 main: com.pi.bukkit.worldgen.floatingisland.FloatingIslandPlugin
 load: startup
